
Made fetch_transport lib part of the general functions set.

Improved class_matrix so it will only clear out classes which are no
longer needed, teacher assignments are preserved for unchanged classes.

Fix to list_member_communities to preserve membership info.

Fix to the new db update function (still under debug only).

Tidied the new assessment import script.


Version ClaSS-1.0.2 release (2011/09/09)
-------------------------------------------

Yougest sibling filter for group_search.

Fix to adding new medical details.

Fixes to new budget needed now groups have no name.

Working on catalogue, inventory and fees.

Sorting of register by class periods fixed.

Separated the completed registers by section and added a sideoption for this.

Improved new_class to allow overwriting exisitng MarkBook classes.


Version ClaSS-1.0.1 release (2011/08/24)
-------------------------------------------

Major change to the way form groups are defined, they are merged
completely with the community table. At the same time permission
groups can now be linked to communities. 

The get_form_tutor function is replaced with list_community_users and
now permits multiple teachers to be acting as form tutors.

Fix to the the create_register script.

Simplified and brought up to date the responsibilities page so it only
deals with academic permissions.

Tiny change to css for rowaction buttons.

Removed the dependency on PEAR XML Serializer and Unserializer
functions. Eliminated the need for nullCorrect in the process.

Fixed the printing of orders.

Treating houses as pastoral commuities the same as forms. Both forms and
houses can be managed through the form group matrix.

The update_community function will now create an associated
permissions group for a pastoral community.

The Register's completion list can now handle houses or forms. 

Several community functions, including listin and
check_community_attendance adapted to use yid to limit the sids
included.
